z-index fix

--- a/styles/mindy.scss
+++ b/styles/mindy.scss
@@ -258,7 +258,19 @@ main {
 
         .background-image-container {
             background-position: top right;
-            z-index: 1;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+
+            .background-image {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              z-index: -1;
+            }
 
             &:after {
                 content: '';
@@ -273,21 +285,12 @@ main {
                 opacity: 0.8;
           }
           
-          .background-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: -1;
-          }          
 
         }
 
         .container {
             position: relative;
-            z-index: 1;
+            z-index: 2;
             background-color: transparent;
 
             span {
